Fix font size issue on mobile

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -49,7 +49,7 @@ p {
   margin: 10px auto;
   padding: 20px;
   width: calc(100vw - 30px);
-  font-size: 5rem;
+  font-size: 4em;
   font-weight: 900;
   border: 2px solid black;
   border-radius: 5px;
